--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,22 @@
-*{
-    padding: 0px;
-    margin: 0px;
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 22/01/2017, 21:12:19
+    Author     : glei-
+*/
+@charset"utf-8";
+.cad{
+    border: 5px solid white;
+    box-shadow: 1px 1px 4px black;
+    margin-top: 10px;
+    background-color: wheat;
 }
-div.header{
-    width: 100%;
-    height: 100px;
-    background-color: rgba(122, 155, 255, 0.7);
+.menu {
+    background-color: #000;
 }
-header .menu{
-	list-style:none;
-    background: red;
-    list-style: none;
-    position: relative;
-}
-header nav.menu ul li{
- display: inline;
-}
-headernav.menu ul li a{
-    font-size: 16px;
-    color: snow;
-    text-decoration: none;
-    display: inline-block;
-    padding: 2px, 10px;
+a{
+    color: red !important;
 }
